<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2016 Google Inc. All Rights Reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">uSpeech</string>
    <string name="permission_message">This app needs to record audio and recognize your speech.</string>
    <string name="listening">Listening…</string>
    <string name="press_speak">Please press the button to speak</string>
    <string name="load_file">Load file</string>
    <string name="source_language">Client Language</string>
    <string name="target_language">Server Language</string>
    <string name="hold_text">Hold to Talk</string>
    <string name="server_hold_text">sTalk</string>
    <string name="input_diff_lang">Please choose different languages</string>
    <string name="login_text">Login</string>

    <string name="account_id">Account Id</string>
    <string name="password">Password</string>


    <string-array name="lang_spinner">
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>Dutch</item>
        <item>Swedish</item>
        <item>Portuguese</item>
        <item>Turkish</item>
        <item>普通话 </item>
        <item>廣東話 </item>
        <item>한국어</item>
        <item>日本語</item>
    </string-array>

    <string-array name="stt_ln">
        <item>en-US</item>
        <item>fr-FR</item>
        <item>de-DE</item>
        <item>es-ES</item>
        <item>it-IT</item>
        <item>nl-NL</item>
        <item>sv-SE</item>
        <item>pt-BR</item>
        <item>tr-TR</item>
        <item>cmn-Hans-CN</item>
        <item>yue-Hant-HK</item>
        <item> ko-KR</item>
        <item>ja-JP</item>
    </string-array>

    <string-array name="trans_ln">
        <item>en</item>
        <item>fr</item>
        <item>de</item>
        <item>es</item>
        <item>it</item>
        <item>nl</item>
        <item>sv</item>
        <item>pt</item>
        <item>tr</item>
        <item>zh-CN </item>
        <item>zh-CN</item>
        <item>ko</item>
        <item>ja</item>
    </string-array>

    <string-array name="tts_ln">
        <item>en-US</item>
        <item>fr-FR</item>
        <item>de-DE</item>
        <item>es-ES</item>
        <item>it-IT</item>
        <item>nl-NL</item>
        <item>sv-SE</item>
        <item>pt-BR</item>
        <item>tr-TR</item>
        <item>普通话 (大陆)</item>
        <item>廣東話 (香港)</item>
        <item>ko-KR</item>
        <item>ja-JP</item>
    </string-array>

    <string-array name="tts_voice">
        <item>en-US-Wavenet-C</item>
        <item>fr-FR-Standard-C </item>
        <item>de-DE-Standard-A</item>
        <item>es-ES-Standard-A</item>
        <item>it-IT-Standard-A</item>
        <item>nl-NL-Standard-A</item>
        <item>sv-SE-Standard-A</item>
        <item>pt-BR-Standard-A</item>
        <item>tr-TR-Standard-A</item>
        <item>普通话 (大陆)</item>
        <item>廣東話 (香港)</item>
        <item>ko-KR-Standard-A</item>
        <item>ja-JP-Standard-A</item>
    </string-array>

    <string-array name="tts_Gender">
        <item>FEMALE</item>
        <item>FEMALE</item>
        <item>FEMALE</item>
        <item>FEMALE</item>
        <item>FEMALE</item>
        <item>FEMALE</item>
        <item>FEMALE</item>
        <item>FEMALE</item>
        <item>FEMALE</item>
        <item>普通话 (大陆)</item>
        <item>廣東話 (香港)</item>
        <item>FEMALE</item>
        <item>FEMALE</item>
    </string-array>

    <!-- 合成 -->
    <string-array name="voicer_cloud_entries">
        <item>小燕</item>
        <item>小宇</item>
        <item>凯瑟琳</item>
        <item>亨利</item>
        <item>玛丽</item>
        <item>小研</item>
        <item>小琪</item>
        <item>小峰</item>
        <item>小梅</item>
        <item>小莉</item>
        <item>小蓉</item>
        <item>小芸</item>
        <item>小坤</item>
        <item>小强 </item>
        <item>小莹</item>
        <item>小新</item>
        <item>楠楠</item>
        <item>老孙</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="voicer_local_entries">
        <item>小燕</item>
        <item>小峰</item>
        <item>佳佳</item>
    </string-array>
    <string-array name="voicer_local_values">
        <item>xiaoyan</item>
        <item>xiaofeng</item>
        <item>jaijia</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string
        name="tts_toast_format"
        formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>

    <string name="app_id">56fdee5c</string>
    <string name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商.</string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies.</string>


</resources>
